[package]
name = "minecraft-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
inquire = "0.7.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1_smol = "1.0.1"
tokio = { version = "1.47.1", features = ["full"] }
