[package]
name = "minecraft-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
apodize = "1.0.0"
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
hound = "3.5.1"
inquire = "0.7.5"
lewton = "0.10.2"
num-traits = "0.2.19"
ogg = "0.9.2"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["json"] }
rustfft = "6.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1_smol = "1.0.1"
tokio = { version = "1.47.1", features = ["full"] }
